# Paranoia-Task-Reciever

./: .gitignore  README.md  main.py  pyproject.toml
src/paranoia_task_reciever/: main.py
src/paranoia_task_reciever/utils/: print.py  ui.py
tasks/: blank.md  example.md  found.md  test.md  testmd.md
utils/: gather_files.py  print.py  ui.py
